@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Improved contacts loading - all contacts are never shown by default, but provide simple method for user to load all contacts.
 * [mms] Add dynamically updating relative time display for messages in dynamic view.
 * [mms] Add Purge Deleted button in smartmobile view (Request #13155).
 * [mms] Improved display of attachments and message log information in dynamic view.
